--- a/views/admin.jade
+++ b/views/admin.jade
@@ -43,11 +43,11 @@ block content
 			input(type="submit", value="SignUp")
 	div
 		p Update Players
-		input(id="updateMLB" type="button" value="Update MLB" onclick="updateMLB()") Update MLB
-		input(id="updateESPN" type="button" value="Update ESPN" onclick="updateESPN()") Update ESPN
+		input(id="updateMLB" type="button" value="Update MLB" onclick="updateMLB()")
+		input(id="updateESPN" type="button" value="Update ESPN" onclick="updateESPN()")
 	div
 		p Search
 		label(for='name') Name
 		input(id="name" type="text" name="name")
-
+		
 	div#results
