--- a/views/admin.jade
+++ b/views/admin.jade
@@ -32,15 +32,32 @@ block inlineScripts
 
 block content
 	div
+		p Vultures
+		-each player in vultures
+			form(id="player_"+player.player_id, method="POST", action="/admin/vulture")
+				span= player.name_display_first_last
+				input#pid(type='hidden', name='pid', value=player.player_id)
+				input(type="submit", value="Remove Vulture")
+			
+	div
 		p Add New User
 		form(id="signup", method="POST", action="/signup")
+			label(for='firstName') First Name
+			input#firstName(type='text', name='firstName')
+			br
+			label(for='lastName') Last Name
+			input#lastName(type='text', name='lastName')
+			br
 			label(for='email') Email
 			input#email(type='text', name='email')
+			br
 			label(for='password') Password
 			input#password(type='password', name='password')
+			br
 			label(for='team') Team
 			input#team(type='text' name='team')
-			input(type="submit", value="SignUp")
+			br
+			input(type="submit", value="Sign Up")
 	div
 		p Update Players
 		input(id="updateMLB" type="button" value="Update MLB" onclick="updateMLB()")
