--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,6 +24,8 @@ html
 						a(href="/logout") Logout
 					&nbsp;&nbsp;
 					-if(user != null && user.role == 'admin') 
+						a(href="/gm/draft") Draft
+						&nbsp;&nbsp;
 						a(href="/admin") Admin
 			
 
