free agent auction stuff, draft stuff

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -61,6 +61,13 @@ block content
 			br
 			input(type="submit", value="Sign Up")
 	div
+		p Create Free Agent Auction
+		form(id="create_auction", method="POST", action="/gm/faa")
+			label(for='faa_name') Name
+			input#faa_name(type='text', name='name')
+			br
+			input(type="submit", value="Create FAA")
+	div
 		p Update Players
 		input(id="updateMLB" type="button" value="Update MLB" onclick="updateMLB()")
 		input(id="updateESPN" type="button" value="Update ESPN" onclick="updateESPN()")
