--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html
 			script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 			script(type='text/javascript', src='http://code.highcharts.com/highcharts.js')
 			script(type='text/javascript', src='http://code.jquery.com/ui/1.10.3/jquery-ui.js')
+			script(type='text/javascript', src='http://raw.github.com/phstc/jquery-dateFormat/master/dist/jquery-dateFormat.js')
 
 	body
 		div(style="float:top")
@@ -25,6 +26,8 @@ html
 					&nbsp;&nbsp;
 					-if(user != null && user.role == 'admin') 
 						a(href="/gm/draft") Draft
+						&nbsp;&nbsp;
+						a(href="/gm/faa") Free Agent Auction
 						&nbsp;&nbsp;
 						a(href="/admin") Admin
 			
