--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,6 +28,8 @@ html
 						&nbsp;&nbsp;
 						a(href="/gm/faa") Free Agent Auction
 						&nbsp;&nbsp;
+						a(href="/gm/vulture") Vulture
+						&nbsp;&nbsp;
 						a(href="/admin") Admin
 			
 
