--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -1,61 +1,5 @@
 extends layout
 
 block content
-	mixin player(player, position)
-		-if(player != undefined)
-			tr(player_id=player.player_id json=JSON.stringify(player))
-				td
-					-if(player.history[player.history_index].minor_leaguer)
-						| Minor Leaguer 
-					-else
-						-if(player.history_index == 0)
-							= player.fantasy_position
-						-else
-							= player.history[player.history_index].fantasy_position
-				td
-					span(onclick="javascript:display(this);")= player.name_display_first_last
-				td
-					input(type="radio" name="removingPlayer" value=player.player_id)
-
-		-else
-			tr
-				td= position
-				td -
-				td
-
-	p= vulture_message
-	p= 'Vulturing: ' + player.name_display_first_last
-	-var actionString = "/gm/vulture/" + player.player_id;
-	form(id="vulture" method="POST" action=actionString)
-		input(type="submit" value="Submit Vulture")
-		br
-		|Select a player to give up:
-		br
-		table
-			thead
-				th Position
-				th Name
-			tbody
-				mixin player(players.catchers[0], 'C')
-				mixin player(players.catchers[1], 'C')
-				mixin player(players.first_base, '1B')
-				mixin player(players.second_base, '2B')
-				mixin player(players.third_base, '3B')
-				mixin player(players.shortstop, 'SS')
-				mixin player(players.middle_infield, '2B/SS')
-				mixin player(players.corner_infield, '1B/3B')
-				mixin player(players.outfielders[0], 'OF')
-				mixin player(players.outfielders[1], 'OF')
-				mixin player(players.outfielders[2], 'OF')
-				mixin player(players.outfielders[3], 'OF')
-				mixin player(players.outfielders[4], 'OF')
-				mixin player(players.utility, 'U')
-				mixin player(players.pitchers[0], 'P')
-				mixin player(players.pitchers[1], 'P')
-				mixin player(players.pitchers[2], 'P')
-				mixin player(players.pitchers[3], 'P')
-				mixin player(players.pitchers[4], 'P')
-				mixin player(players.pitchers[5], 'P')
-				mixin player(players.pitchers[6], 'P')
-				mixin player(players.pitchers[7], 'P')
-				mixin player(players.pitchers[8], 'P')
+	-each player in vulturablePlayers
+		a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
