--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -1,5 +1,14 @@
 extends layout
 
+block inlineScripts
+	script.
+		var socket = io.connect('http://localhost:5000');
+		socket.on('message', function (data) {
+			$('#content').append(data);
+			socket.emit('my other event', { my: 'data' });
+		});
+
 block content
-	-each player in vulturablePlayers
-		a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
+	div#content
+	//-each player in vulturablePlayers
+	//	a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
