--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -2,13 +2,13 @@ extends layout
 
 block inlineScripts
 	script.
-		var socket = io.connect('http://localhost:5000');
-		socket.on('message', function (data) {
-			$('#content').append(data);
-			socket.emit('my other event', { my: 'data' });
-		});
+		//var socket = io.connect('http://localhost:5000');
+		//socket.on('message', function (data) {
+		//	$('#content').append(data);
+		//	socket.emit('my other event', { my: 'data' });
+		//});
 
 block content
 	div#content
-	//-each player in vulturablePlayers
-	//	a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
+	-each player in vulturablePlayers
+		a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
