--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -10,5 +10,52 @@ block inlineScripts
 
 block content
 	div#content
-	-each player in vulturablePlayers
-		a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
+	h2 Open Vultures
+	table
+		thead
+			th Name
+			th Team
+			th Major League Status
+			th Fantasy Status
+		tbody
+			-each player in openVultures
+					tr
+						td
+							a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
+						td= player.history[1].fantasy_team
+						td= player.status_code
+						td= player.fantasy_status_code
+
+	h2= user.team + "'s Vulturable Players"
+	table
+		thead
+			th Name
+			th Team
+			th Major League Status
+			th Fantasy Status
+		tbody
+			-each player in vulturablePlayers
+				-if(player.history[1].fantasy_team == user.team)
+					tr
+						td
+							a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
+						td= player.history[1].fantasy_team
+						td= player.status_code
+						td= player.fantasy_status_code
+
+	h2 Leaguewide Vulturable Players
+	table
+		thead
+			th Name
+			th Team
+			th Major League Status
+			th Fantasy Status
+		tbody
+			-each player in vulturablePlayers
+				-if(player.history[1].fantasy_team != user.team)
+					tr
+						td
+							a(href="/gm/vulture/" + player.player_id)= player.name_display_first_last
+						td= player.history[1].fantasy_team
+						td= player.status_code
+						td= player.fantasy_status_code
