--- a/views/team.jade
+++ b/views/team.jade
@@ -63,7 +63,7 @@ block content
 									=vulture_string
 						-else
 							td
-								a(href="/gm/vulture/" + player.player_id)= vulture_string + ", Click to Fix"
+								a(href="/gm/vulture/fix/" + player.player_id)= vulture_string + ", Click to Fix"
 					-else
 						td= vulture_string
 
