--- a/views/team.jade
+++ b/views/team.jade
@@ -32,7 +32,7 @@ block content
 		-if(player != undefined)
 			tr(player_id=player.player_id json=JSON.stringify(player))
 				td
-					-if(player.history[player.history_index].minor_leaguer)
+					-if(player.history[player.history_index].minor_leaguer && player.fantasy_position == 'Bench')
 						| Minor Leaguer 
 					-else
 						-if(player.history_index == 0)
